# university-cpp-project

./: CLI.h  CMakeLists.txt  Contact.h  Department.h  Faculty.h  README.md  Student.cpp  Student.h  UniCli.cpp  UniCli.h  University.cpp  University.h  main.cpp
doc/: Software Design Document.md
